# vlcupdater2

./: .gitignore  PROMPTER_BRUKT.md  README.md  pyproject.toml
src/vlc_updater/: __init__.py  checker.py  cli.py  db.py
src/vlc_updater.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_checker.py
