[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlc-updater"
version = "0.1.0"
description = "Sjekker om VLC har ny versjon og lagrer historikk i SQLite"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "kunst og arkitektur"}]
dependencies = []

[project.scripts]
vlc-updater = "vlc_updater.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
